--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "@types/react": "^16.14.22",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.22",
+    "@types/styled-components": "^5.1.21",
+    "dayjs": "^1.10.7",
+    "plural-ru": "^2.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux-devtools-extension": "^2.13.9",
+    "styled-components": "^5.3.3",
     "typescript": "~4.1.5"
   },
   "scripts": {
@@ -38,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/redux-thunk": "^2.1.0"
   }
 }
